# backend-coding-challenge

./: Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  run.py
gistapi/: __init__.py  gistapi.py
gistapi/api/: __init__.py  base.py  gistapi.py
gistapi/handlers/: __init__.py
gistapi/schemas/: __init__.py  error_response.py  search_request.py  search_response.py
gistapi/service/: __init__.py  gitst_service.py
tests/: test_gist_service.py  test_gistapi.py
